Change DifferTest.java